Login is cleared

--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -19,12 +19,12 @@
  <!-- <ion-button class="btn-primary" ion-button (click)="inspect()" style="background-color:red;border-right:0;width:32%; display: inline-block;border-left:0">
          Tech Inspect
       </ion-button> -->
-      <ion-fab vertical="bottom" horizontal="center" translucent="true">
+      <!-- <ion-fab vertical="bottom" horizontal="center" translucent="true">
     <ion-fab-button (click)="navigateToRouteOnGoPage()">
       <ion-icon name=arrow-back></ion-icon>
     </ion-fab-button>
      
-  </ion-fab>
+  </ion-fab> -->
 </ion-content>
 
 
