--- a/src/app/routelist/routelist.page.scss
+++ b/src/app/routelist/routelist.page.scss
@@ -1,57 +1,74 @@
 //2021
 .my-custom-class .alert-wrapper {
     background: #e5e5e5;
-  }
-//2020
-.header{
-    background-color:var(--ion-color-ibus-blue);
 }
-.ios ion-toolbar{
+
+//2020
+.header {
+    background-color: var(--ion-color-ibus-blue);
+}
+
+.ios ion-toolbar {
     --background: #4E98FF;
     height: 127px;
 }
-.md ion-toolbar{
+
+.md ion-toolbar {
     --background: #4E98FF;
     height: 87px;
 }
-.ios ion-fab{
-    margin-bottom: env(safe-area-inset-bottom); /* fix notch ios*/
-		ion-fab-button {
-			--box-shadow: none;
-        }
-        position:fixed;
+
+.ios ion-fab {
+    margin-bottom: env(safe-area-inset-bottom);
+
+    /* fix notch ios*/
+    ion-fab-button {
+        --box-shadow: none;
+    }
+
+    position:fixed;
 }
-.md ion-fab{
-    margin-bottom: env(safe-area-inset-bottom); /* fix notch ios*/
-		ion-fab-button {
-			--box-shadow: none;
-        }
-        position:fixed;
+
+.md ion-fab {
+    margin-bottom: env(safe-area-inset-bottom);
+
+    /* fix notch ios*/
+    ion-fab-button {
+        --box-shadow: none;
+    }
+
+    position:fixed;
 }
-.notBtn{
+
+.notBtn {
     color: white;
     width: 47px;
     height: 62px;
 }
-.menuBtn{
+
+.menuBtn {
     font-size: 100px;
     width: 70px;
     color: white;
 }
-.menuTxt{
-    font-size:18px;
-    font-family:monteRegular;
-    color:var(--ion-color-ibus-darkblue);
+
+.menuTxt {
+    font-size: 18px;
+    font-family: monteRegular;
+    color: var(--ion-color-ibus-darkblue);
 }
-.iconStyling{
-    color:var(--ion-color-ibus-darkblue);
+
+.iconStyling {
+    color: var(--ion-color-ibus-darkblue);
 }
-.menuToolbar{
+
+.menuToolbar {
     position: relative;
     margin-top: 80px;
     font-size: 25px;
 }
-.ios #profile{
+
+.ios #profile {
     width: 60px;
     height: 60px;
     background-color: white;
@@ -61,16 +78,18 @@
     margin-bottom: 31px;
     background-image: url(../../assets/images/profile.jpg);
     background-size: 60px 80px;
-    
+
 }
-.ios ion-title{
+
+.ios ion-title {
     position: absolute;
     top: -15px;
     left: -30px;
     color: white;
     font-size: 21px;
 }
-.md #profile{
+
+.md #profile {
     width: 60px;
     height: 60px;
     background-color: white;
@@ -81,42 +100,55 @@
     background-image: url(../../assets/images/profile.jpg);
     background-size: 60px 80px;
 }
-.ios .nav-buttons{
+
+.ios .nav-buttons {
     margin-bottom: 30px;
 }
-.md ion-title{
+
+.md ion-title {
     position: absolute;
     top: 30px;
     left: 80px;
     color: white;
     font-size: 21px;
 }
-.md .nav-buttons{
+
+.md .nav-buttons {
     margin-bottom: -15px;
 }
-.customRoutes{
+
+.customRoutes {
     font-size: 25px;
     display: flex;
     width: 100%;
     justify-content: center;
     margin-top: 10%;
-    font-family:monteBold;
-    color:var(--ion-color-ibus-theblue);
+    font-family: monteBold;
+    color: var(--ion-color-ibus-theblue);
 }
-.myiontab{
-	ion-fab {
-		margin-bottom: env(safe-area-inset-bottom); /* fix notch ios*/
-		ion-fab-button {
-			--box-shadow: none;
-			z-index: 1;
-		}
-	}
-	ion-tab-bar {
+
+.myiontab {
+    position: relative;
+    bottom: 0px;
+
+    ion-fab {
+        margin-bottom: env(safe-area-inset-bottom);
+
+        /* fix notch ios*/
+        ion-fab-button {
+            --box-shadow: none;
+            z-index: 1;
+        }
+    }
+
+    ion-tab-bar {
         .addBtn {
             justify-content: center;
             display: flex;
             text-align: center;
-            margin-bottom: env(safe-area-inset-bottom); /* fix notch ios*/
+            margin-bottom: env(safe-area-inset-bottom);
+
+            /* fix notch ios*/
             button {
                 --box-shadow: none;
                 background-color: var(--ion-color-ibus-theblue);
@@ -127,120 +159,136 @@
                 left: 181px;
                 top: -32px;
             }
-            ion-icon{
-                color:white;
-                width:30px;
-                height:30px;
+
+            ion-icon {
+                color: white;
+                width: 30px;
+                height: 30px;
                 stroke: 5px;
             }
         }
-		--border: 0;
-		--background: transparent;
-		position: absolute;
-		bottom: 0;
-		left:0; right: 0;
+
+        --border: 0;
+        --background: transparent;
+        position: absolute;
+        bottom: 0;
+        left:0;
+        right: 0;
         width: 100%;
         height:70px;
-		&:after{
-			content: " ";
-			width: 100%;
-			bottom: 0;
-			background: var(--ion-color-light);
-			height: env(safe-area-inset-bottom);
-			position: absolute;
-		}
-		ion-tab-button {
-			--background: var(--ion-color-light);
-		}
-		ion-tab-button.comments {
-			margin-right: 0px;
-			border-top-right-radius: 18px;
-		}
-		ion-tab-button.notifs {
-			margin-left: 0px;
-			border-top-left-radius: 18px;
-		}
-		svg {    
-			width: 72px;
-			margin-top: 19px;
-			path{
-				fill:  var(--ion-color-light);
-			}		
-		}
-	}
+
+        &:after {
+            content: " ";
+            width: 100%;
+            bottom: 0;
+            background: var(--ion-color-light);
+            height: env(safe-area-inset-bottom);
+            position: absolute;
+        }
+
+        ion-tab-button {
+            --background: var(--ion-color-light);
+        }
+
+        ion-tab-button.comments {
+            margin-right: 0px;
+            border-top-right-radius: 18px;
+        }
+
+        ion-tab-button.notifs {
+            margin-left: 0px;
+            border-top-left-radius: 18px;
+        }
+
+        svg {
+            width: 72px;
+            margin-top: 19px;
+
+            path {
+                fill: var(--ion-color-light);
+            }
+        }
+    }
 }
 
-    
-    // ion-badge{
-    //     --background: transparent;
-    // }
+
+// ion-badge{
+//     --background: transparent;
+// }
 
 
-.from{
+.from {
     width: 120px;
     height: 35px;
     --background: var(--ion-color-ibus-darkblue);
     border-radius: 5px;
     text-align: center;
-    color:white;
+    color: white;
     position: relative;
     top: 35px;
     left: 52px;
 }
-.to{
+
+.to {
     width: 120px;
     height: 35px;
     --background: var(--ion-color-ibus-darkblue);
     border-radius: 5px;
     text-align: center;
-    color:white;
+    color: white;
     position: relative;
     top: 0px;
     left: 209px;
 }
 
-::placeholder{
-    color:white;
-    opacity:1;
+::placeholder {
+    color: white;
+    opacity: 1;
 }
+
 ion-datetime {
-    color:white !important;
+    color: white !important;
     // position: relative;
     // top: -6px;
     // left: 3px;
-    font-family:monteBold;
-    font-size:13px;
+    font-family: monteBold;
+    font-size: 13px;
     padding: 0px 0px 11px 7px;
 }
 
-.centerlabel{
+.centerlabel {
     display: flex;
     justify-content: center;
     width: auto;
-  }
-.icon-size{
-    width:60px;
-    height:60px;
-     color:var(--ion-color-ibus-darkblue);
 }
-.availability{
+
+.icon-size {
+    width: 60px;
+    height: 60px;
+    color: var(--ion-color-ibus-darkblue);
+}
+
+.availability {
     position: relative;
     top: -19px;
     left: 10px;
     font-size: 10px;
-    opacity: 43%;
-    font-family:monteRegular;
-    color:var(--ion-color-ibus-darkblue);
+    opacity: 100%;
+    font-family: monteRegular;
+    color: var(--ion-color-ibus-darkblue);
 }
-ion-item{
+
+ion-item {
     width: 550px;
+
 }
-.destination{
+
+.destination {
     position: relative;
     right: 144px;
     font-size: 14px;
     font-family: monteSBold;
-    color:var(--ion-color-ibus-darkblue);
+    color: var(--ion-color-ibus-darkblue);
     // position: absolute;
     // right: 270px;
     // font-size: 14px;
@@ -255,37 +303,48 @@ ion-item{
     // color: var(--ion-color-ibus-darkblue);
     // top: 16px;
 }
-ion-list{
+
+ion-list {
     margin-top: 6%;
+    margin-bottom: 18%;
 }
-.date{
+
+.ios ion-list {
+    margin-top: 6%;
+    margin-bottom: 18%;
+}
+
+.date {
     position: relative;
     right: 296px;
     font-size: 12px;
     opacity: 43%;
     font-family: monteRegular;
     margin-top: 49px;
-    color:var(--ion-color-ibus-darkblue);
+    color: var(--ion-color-ibus-darkblue);
 }
-.currentDate{
+
+.currentDate {
     position: relative;
     top: 21px;
-    font-family:monteRegular;
-    font-size:13px;
-    color:var(--ion-color-ibus-darkblue);
+    font-family: monteRegular;
+    font-size: 13px;
+    color: var(--ion-color-ibus-darkblue);
 }
-.searchRoute{
+
+.searchRoute {
     position: relative;
     top: 13px;
-    font-size:13px;
-    font-family:monteBold;
-    color:var(--ion-color-ibus-darkblue);
+    font-size: 13px;
+    font-family: monteBold;
+    color: var(--ion-color-ibus-darkblue);
 }
-.btn-accept{
+
+.btn-accept {
     width: 80px;
     height: 36px;
     position: absolute;
-    background-color:var(--ion-color-ibus-theblue);
+    background-color: var(--ion-color-ibus-theblue);
     color: white;
     font-size: 13px;
     text-align: center;
@@ -295,53 +354,80 @@ ion-list{
 
 
 @media only screen and (max-width: 375px) {
-   ion-toolbar{
-    --background: #4E98FF;
-    height: 100px;
-   }
-   ion-list{
-    position: relative;
-    left: -8px;
-   }
-   .btn-accept{
-    width: 80px;
-    height: 36px;
-    position: absolute;
-    background-color: var(--ion-color-ibus-theblue);
-    color: white;
-    font-size: 13px;
-    text-align: center;
-    border-radius: 5px;
-    left: 185px;
-   }
-   ion-title{
-    font-size: 15px;
-    position: relative;
-    top: -74px;
-    left: 10px;
-    color: white;
-   }
+    ion-toolbar {
+        --background: #4E98FF;
+        height: 100px;
+    }
 
-  }
-  @media only screen and (max-width: 414px) {
-    ion-toolbar{
+    ion-list {
+        position: relative;
+        left: -8px;
+
+    }
+
+    .ios ion-list {
+        margin-top: 6%;
+        margin-bottom: 18%;
+    }
+
+    .btn-accept {
+        width: 80px;
+        height: 36px;
+        position: absolute;
+        background-color: var(--ion-color-ibus-theblue);
+        color: white;
+        font-size: 13px;
+        text-align: center;
+        border-radius: 5px;
+        left: 185px;
+    }
+
+    ion-title {
+        font-size: 15px;
+        position: relative;
+        top: -74px;
+        left: 10px;
+        color: white;
+    }
+
+}
+
+@media only screen and (max-width: 414px) {
+    ion-toolbar {
         --background: #4E98FF;
         height: 127px;
     }
-  }
-  @media only screen and (max-width: 320px) {
-    ion-toolbar{
+
+    .ios ion-list {
+        margin-top: 6%;
+        margin-bottom: 18%;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    ion-toolbar {
         --background: #4E98FF;
         height: 70px;
     }
-  }
 
-  @media only screen and (max-width: 375px) {
-    .ios ion-toolbar{
+    .ios ion-list {
+        margin-top: 6%;
+        margin-bottom: 18%;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .ios ion-toolbar {
         --background: #4E98FF;
         height: 95px;
     }
-    #profile{
+
+    .ios ion-list {
+        margin-top: 6%;
+        margin-bottom: 18%;
+    }
+
+    #profile {
         width: 60px;
         height: 60px;
         background-color: white;
@@ -350,17 +436,20 @@ ion-list{
         left: 27px;
         margin-bottom: 31px;
     }
-    .ios ion-title{
+
+    .ios ion-title {
         position: absolute;
         top: -15px;
         left: -30px;
         color: white;
         font-size: 21px;
     }
-    .nav-buttons{
+
+    .nav-buttons {
         margin-bottom: 28px;
     }
-    .from{
+
+    .from {
         width: 120px;
         height: 35px;
         --background: var(--ion-color-ibus-darkblue);
@@ -370,8 +459,9 @@ ion-list{
         position: relative;
         top: 35px;
         left: 33px;
-       }
-       .to{
+    }
+
+    .to {
         width: 120px;
         height: 35px;
         --background: var(--ion-color-ibus-darkblue);
@@ -381,41 +471,49 @@ ion-list{
         position: relative;
         top: 0px;
         left: 189px;
-       }
-  }
-  @media only screen and (max-width: 320px) {
-   .from{
-    width: 120px;
-    height: 35px;
-    --background: var(--ion-color-ibus-darkblue);
-    border-radius: 5px;
-    text-align: center;
-    color: white;
-    position: relative;
-    top: 35px;
-    left: 13px;
-   }
-   .to{
-    width: 120px;
-    height: 35px;
-    --background: var(--ion-color-ibus-darkblue);
-    border-radius: 5px;
-    text-align: center;
-    color: white;
-    position: relative;
-    top: 0px;
-    left: 149px;
-   }
-   .btn-accept{
-    width: 60px;
-    height: 36px;
-    position: absolute;
-    background-color: var(--ion-color-ibus-theblue);
-    color: white;
-    font-size: 13px;
-    text-align: center;
-    border-radius: 5px;
-    left: 149px;
-   }
+    }
+}
 
-  }
+@media only screen and (max-width: 320px) {
+    .from {
+        width: 120px;
+        height: 35px;
+        --background: var(--ion-color-ibus-darkblue);
+        border-radius: 5px;
+        text-align: center;
+        color: white;
+        position: relative;
+        top: 35px;
+        left: 13px;
+    }
+
+    .ios ion-list {
+        margin-top: 6%;
+        margin-bottom: 18%;
+    }
+
+    .to {
+        width: 120px;
+        height: 35px;
+        --background: var(--ion-color-ibus-darkblue);
+        border-radius: 5px;
+        text-align: center;
+        color: white;
+        position: relative;
+        top: 0px;
+        left: 149px;
+    }
+
+    .btn-accept {
+        width: 60px;
+        height: 36px;
+        position: absolute;
+        background-color: var(--ion-color-ibus-theblue);
+        color: white;
+        font-size: 13px;
+        text-align: center;
+        border-radius: 5px;
+        left: 149px;
+    }
+
+}
