--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -93,12 +93,7 @@
 <div class="myiontab">
 
   <ion-tab-bar slot="bottom" class="ion-no-border">
-    <ion-buttons class="addBtn" (click)="navigateToStartFeedPage()" vertical="bottom" horizontal="center" translucent="true">
-      <button (click)="navigateToStartFeedPage()" class="adBtn2">
-        <ion-icon name="arrow-back"></ion-icon>
-      </button>
-    </ion-buttons>
-    <ion-tab-button tab="routelist" (click)="navigateToRouteListPage()">
+    <ion-tab-button tab="routelist" (click)="navigateToStartFeedPage()">
       <ion-icon class="iconStyling" name="home"></ion-icon>
     </ion-tab-button>
 
@@ -106,7 +101,7 @@
       <ion-icon class="iconStyling" name="wallet"></ion-icon>
     </ion-tab-button>
 
-    <svg height="50" viewBox="0 0 100 50" width="100" xmlns="http://www.w3.org/2000/svg"><path d="M100 0v50H0V0c.543 27.153 22.72 49 50 49S99.457 27.153 99.99 0h.01z" fill="red" fill-rule="evenodd"></path></svg>
+  
 
     <ion-tab-button tab="route-history" class="notifs" (click)="navigateToRouteHistoryPage()">
       <ion-icon class="iconStyling" name="file-tray-full"></ion-icon>
