--- a/src/app/routelist/routelist.page.html
+++ b/src/app/routelist/routelist.page.html
@@ -2,123 +2,121 @@
 
   <ion-header>
     <ion-toolbar translucent>
-      <ion-title class="menuToolbar" >{{'routelist-menu.title' | translate}}</ion-title>
+      <ion-title class="menuToolbar">{{'routelist-menu.title' | translate}}</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-content>
     <ion-list>
-      <ion-item routerLink="/home2/routelist" >
+      <ion-item routerLink="/home2/routelist">
         <ion-icon class="iconStyling" name="home" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-myRoutes.title' | translate}}</ion-label>
+        <ion-label class="menuTxt">{{'routelist-myRoutes.title' | translate}}</ion-label>
       </ion-item>
       <ion-item (click)="navigateToWalletPage()">
         <ion-icon class="iconStyling" name="wallet" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-myWallet.title' | translate}}</ion-label>
+        <ion-label class="menuTxt">{{'routelist-myWallet.title' | translate}}</ion-label>
       </ion-item>
       <ion-item (click)="navigateToRouteHistoryPage()">
         <ion-icon class="iconStyling" name="file-tray-full" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-routeHistory.title' | translate}}</ion-label>
+        <ion-label class="menuTxt">{{'routelist-routeHistory.title' | translate}}</ion-label>
       </ion-item>
       <ion-item (click)="navigateToProfilePage()">
         <ion-icon class="iconStyling" name="person" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-profile.title' | translate}}</ion-label>
+        <ion-label class="menuTxt">{{'routelist-profile.title' | translate}}</ion-label>
       </ion-item>
       <ion-item (click)="navigateToSettingsPage()">
         <ion-icon class="iconStyling" name="settings" slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-settings.title' | translate}}</ion-label>
+        <ion-label class="menuTxt">{{'routelist-settings.title' | translate}}</ion-label>
       </ion-item>
       <ion-item routerLink="/login">
-        <ion-icon class="iconStyling" name="log-out"  slot="start"></ion-icon>
-        <ion-label class="menuTxt" >{{'routelist-logout.title' | translate}}t</ion-label>
+        <ion-icon class="iconStyling" name="log-out" slot="start"></ion-icon>
+        <ion-label class="menuTxt">{{'routelist-logout.title' | translate}}t</ion-label>
       </ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
 
-  <ion-header>
-    <ion-toolbar>
-      <ion-buttons class="nav-buttons" slot="end">
-         <ion-button style="width: 50px;/*!" (click)="navigateToNotificationsPage()" ><ion-icon class="notBtn" name="notifications" ></ion-icon><ion-badge></ion-badge></ion-button>
-        <ion-menu-button class="menuBtn"></ion-menu-button>
-      </ion-buttons>
-      <ion-buttons (click)="navigateToProfilePage()" id="profile"></ion-buttons>
-      <ion-title>{{'routelist-myRoutes.title' | translate}}</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons class="nav-buttons" slot="end">
+      <ion-button style="width: 50px;/*!" (click)="navigateToNotificationsPage()">
+        <ion-icon class="notBtn" name="notifications"></ion-icon>
+        <ion-badge></ion-badge>
+      </ion-button>
+      <ion-menu-button class="menuBtn"></ion-menu-button>
+    </ion-buttons>
+    <ion-buttons (click)="navigateToProfilePage()" id="profile"></ion-buttons>
+    <ion-title>{{'routelist-myRoutes.title' | translate}}</ion-title>
+  </ion-toolbar>
+</ion-header>
 
-  <ion-content>
+<ion-content>
 
 
 
-    <ion-item class="from">
-      <ion-datetime placeholder="{{'routelist-from.title' | translate}}" displayFormat="DD/MM/YYYY" (ionChange)="getChangeFunctionFromEveryHTTP()" [(ngModel)]="startDate" ></ion-datetime>
-    </ion-item>
-    <ion-item class="to" >
-      <ion-datetime class="text-center" placeholder="{{'routelist-to.title' | translate}}" displayFormat="DD/MM/YYYY"(ionChange)="getChangeFunctionFromEveryHTTP()" [(ngModel)]="endDate"></ion-datetime>
-    </ion-item>
-    <!-- <ion-label class="customRoutes">CUSTOM ROUTESS EDW{{custArrayPicks}}</ion-label>
-    <ion-list>
-      <ion-item *ngFor="let item of bcustArrayPicks" (click)="sendDataToRouteStarted(select)">
-        <ion-buttons item-start>
-        <ion-icon class="icon-size" name="map" ></ion-icon>
-      </ion-buttons>
-      <ion-buttons item-end>
-        <button  class="btn-accept" ion-button color="light">TAKE</button>
-      </ion-buttons>
-      <ion-label class="availability" >{{CustStartingPointElementFromArrayOfPickups}}</ion-label> <br>
-      <ion-label class="destination">{{CustTheLastPointElementFromArrayOfPickups}}</ion-label> <br>
-      <ion-label class="date">{{item}}1</ion-label> 
-    
+  <div class="centerFromTo">
+   <ion-row>
+     <ion-col>
+      <ion-item class="from">
+        <ion-datetime placeholder="{{'routelist-from.title' | translate}}" displayFormat="DD/MM/YYYY"
+          (ionChange)="getChangeFunctionFromEveryHTTP()" [(ngModel)]="startDate"></ion-datetime>
       </ion-item>
-     
-     
-    </ion-list> -->
+     </ion-col>
+     <ion-col>
+ 
+      <ion-item class="to">
+        <ion-datetime class="text-center" placeholder="{{'routelist-to.title' | translate}}" displayFormat="DD/MM/YYYY"
+          (ionChange)="getChangeFunctionFromEveryHTTP()" [(ngModel)]="endDate"></ion-datetime>
+      </ion-item>
+     </ion-col>
+    </ion-row>
+  </div>
+  <ion-label class="customRoutes">ROUTES</ion-label>
+  <ion-list>
 
-   
-    <ion-list >
-      <ion-label class="customRoutes">ROUTES</ion-label>
-      <ion-item *ngFor="let select of filtered; " (click)="sendDataToRouteStarted(select)">
-        <ion-buttons item-start>
-        <ion-icon class="icon-size" name="map" ></ion-icon>
+    <ion-item *ngFor="let select of filtered; " (click)="sendDataToRouteStarted(select)">
+      <ion-buttons item-start>
+        <ion-icon class="icon-size" name="map"></ion-icon>
       </ion-buttons>
       <ion-buttons item-end>
-        <button  class="btn-accept" ion-button color="light">TAKE</button>
+        <button class="btn-accept" ion-button color="light">TAKE</button>
       </ion-buttons>
-      
+
       <ion-label class="availability" *ngIf="select.TYPE == 'FIX' ">FIXED ROUTE</ion-label> <br>
       <ion-label class="availability" *ngIf="select.TYPE == 'CUST' ">CUSTOM ROUTE</ion-label> <br>
-      <ion-label class="destination" *ngIf="select.TYPE == 'FIX' " >{{FixedStartingPointElementFromArrayOfPickups}}</ion-label> <br>
-      <ion-label class="destination" *ngIf="select.TYPE == 'CUST' " >{{CustStartingPointElementFromArrayOfPickups}}</ion-label> <br>
-     <ion-label class="date" *ngIf="select.TYPE == 'FIX' ">{{FixedTheLastPointElementFromArrayOfPickups}}</ion-label> 
-     <ion-label class="date" *ngIf="select.TYPE == 'CUST' ">{{CustTheLastPointElementFromArrayOfPickups}}</ion-label> 
+      <ion-label class="destination" *ngIf="select.TYPE == 'FIX' ">{{FixedStartingPointElementFromArrayOfPickups}}
+      </ion-label> <br>
+      <ion-label class="destination" *ngIf="select.TYPE == 'CUST' ">{{CustStartingPointElementFromArrayOfPickups}}
+      </ion-label> <br>
+      <ion-label class="date" *ngIf="select.TYPE == 'FIX' ">{{FixedTheLastPointElementFromArrayOfPickups}}</ion-label>
+      <ion-label class="date" *ngIf="select.TYPE == 'CUST' ">{{CustTheLastPointElementFromArrayOfPickups}}</ion-label>
 
 
-      </ion-item>
-     
-     
-    </ion-list>
-  </ion-content>
+    </ion-item>
 
-  <div class="myiontab">
-    <ion-tab-bar slot="bottom" class="ion-no-border">
 
-      <ion-tab-button tab="routelist" (click)="navigateToRouteListPage()">
-        <ion-icon class="iconStyling" name="home"></ion-icon>
-      </ion-tab-button>
-  
-      <ion-tab-button tab="wallet" class="comments" (click)="takePhotoWithOldFashionHttpRequest()">
-        <ion-icon class="iconStyling" name="camera"></ion-icon>
-      </ion-tab-button>
-  
-   
-      <ion-tab-button tab="route-history" class="notifs" (click)="navigateToRouteHistoryPage()">
-        <ion-icon class="iconStyling" name="file-tray-full"></ion-icon>
-      </ion-tab-button>
-  
-      <ion-tab-button tab="settings" (click)="navigateToSettingsPage()">
-        <ion-icon class="iconStyling" name="settings"></ion-icon>
-      </ion-tab-button>
-    </ion-tab-bar>
-  
-  </div>
+  </ion-list>
+</ion-content>
+
+<div class="myiontab">
+  <ion-tab-bar slot="bottom" class="ion-no-border">
+
+    <ion-tab-button tab="routelist" (click)="navigateToRouteListPage()">
+      <ion-icon class="iconStyling" name="home"></ion-icon>
+    </ion-tab-button>
+
+    <ion-tab-button tab="wallet" class="comments" (click)="takePhotoWithOldFashionHttpRequest()">
+      <ion-icon class="iconStyling" name="camera"></ion-icon>
+    </ion-tab-button>
+
+
+    <ion-tab-button tab="route-history" class="notifs" (click)="navigateToRouteHistoryPage()">
+      <ion-icon class="iconStyling" name="file-tray-full"></ion-icon>
+    </ion-tab-button>
+
+    <ion-tab-button tab="settings" (click)="navigateToSettingsPage()">
+      <ion-icon class="iconStyling" name="settings"></ion-icon>
+    </ion-tab-button>
+  </ion-tab-bar>
+
+</div>
