--- a/src/app/routelist/routelist.page.scss
+++ b/src/app/routelist/routelist.page.scss
@@ -2,7 +2,13 @@
 .my-custom-class .alert-wrapper {
     background: #e5e5e5;
 }
-
+.centerFromTo{
+    justify-content: center;
+    display: flex;
+    width: 100%;
+    position: relative;
+    top: 6%;
+}
 //2020
 .header {
     background-color: var(--ion-color-ibus-blue);
@@ -122,7 +128,7 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    margin-top: 10%;
+    margin-top: 18%;
     font-family: monteBold;
     color: var(--ion-color-ibus-theblue);
 }
@@ -224,9 +230,6 @@
     border-radius: 5px;
     text-align: center;
     color: white;
-    position: relative;
-    top: 35px;
-    left: 52px;
 }
 
 .to {
@@ -236,9 +239,7 @@
     border-radius: 5px;
     text-align: center;
     color: white;
-    position: relative;
-    top: 0px;
-    left: 209px;
+
 }
 
 ::placeholder {
@@ -456,9 +457,7 @@ ion-list {
         border-radius: 5px;
         text-align: center;
         color: white;
-        position: relative;
-        top: 35px;
-        left: 33px;
+
     }
 
     .to {
@@ -468,9 +467,7 @@ ion-list {
         border-radius: 5px;
         text-align: center;
         color: white;
-        position: relative;
-        top: 0px;
-        left: 189px;
+
     }
 }
 
@@ -482,9 +479,7 @@ ion-list {
         border-radius: 5px;
         text-align: center;
         color: white;
-        position: relative;
-        top: 35px;
-        left: 13px;
+
     }
 
     .ios ion-list {
@@ -499,9 +494,7 @@ ion-list {
         border-radius: 5px;
         text-align: center;
         color: white;
-        position: relative;
-        top: 0px;
-        left: 149px;
+
     }
 
     .btn-accept {
